src/global/core-modules/emr-server-mgmt/objects/EmrServerAccountReference__c/EmrServerAccountReference__c.object-meta.xml
<CustomObject>
    <label>EMR Server Account Reference</label>
    <nameField>
        <displayFormat>ESAR-{0000}</displayFormat>
        <label>EMR Server Account Reference #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>EMR Server Account References</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>